# n-functor

./: .gitignore  Cargo.toml  LICENCE.md  README.md
examples/: maps_to_result.rs  n-functor.rs
src/: lib.rs
