[package]
name = "n-functor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Faux-derive a `map` function for types with one or more type parameters."
keywords = ["functional", "map", "functor", "macro", "horror"]
categories = ["rust-patterns"]
homepage = "https://github.com/fallible-algebra/n-functor"
repository = "https://github.com/fallible-algebra/n-functor"
readme = "README.md"

[dependencies]
proc-macro2 = "1.0.*"
quote = { version = "1.0.*" }
syn = { version = "2.0.*", features = ["full", "extra-traits"] }

[lib]
proc-macro = true